Handle OMERO port information